test/files/neg/t2130.scala
// for now we disallow case class in package objects
package object foo {

    case class X()

}
