test/files/neg/t2130.check
t2130.scala:4: error: implementation restriction: package object foo cannot contain case class X
    case class X()
               ^
one error found
